fix: contrast on nav items a11y :bug:

--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -23,7 +23,7 @@ External Modules
 }
 
 .nav-item {
-  color: $gray3;
+  color: $gray5;
   font-size: 0.9rem;
   margin-right: 1.3rem;
   text-decoration: none;
